--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--Шапка сайта-->
     <header>
       <nav>
-        <a href="">Web Studio</a>
+        <a href="/">Web Studio</a>
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -83,15 +83,17 @@
         <ul>
           <li>
             <img src="./images/service-1.jpg" alt="" />
-            <h3>Десктопное приложение</h3>
+            <a href=""><h3>Десктопное приложение</h3></a>
           </li>
           <li>
             <img src="./images/service-2.jpg" alt="" />
-            <h3>Мобильные приложения</h3>
+            <a href="">
+              <h3>Мобильные приложения</h3>
+            </a>
           </li>
           <li>
             <img src="./images/service-3.jpg" alt="" />
-            <h3>Дизайнерские решения</h3>
+            <a href=""><h3>Дизайнерские решения</h3></a>
           </li>
         </ul>
       </section>
@@ -104,10 +106,10 @@
             <h3>John Smith</h3>
             <p>Product Designer</p>
             <ul>
-              <li><a href="">Instagram</a></li>
-              <li><a href="">Twitter</a></li>
-              <li><a href="">Facebook</a></li>
-              <li><a href="">Linkedin</a></li>
+              <li><a href="" aria-label="Instagram">Instagram</a></li>
+              <li><a href="" aria-label="Twitter">Twitter</a></li>
+              <li><a href="" aria-label="Facebook">Facebook</a></li>
+              <li><a href="" aria-label="Linkedin">Linkedin</a></li>
             </ul>
           </li>
           <li>
@@ -115,10 +117,10 @@
             <h3>Marta Stewart</h3>
             <p>Frontend Developer</p>
             <ul>
-              <li><a href="">Instagram</a></li>
-              <li><a href="">Twitter</a></li>
-              <li><a href="">Facebook</a></li>
-              <li><a href="">Linkedin</a></li>
+              <li><a href="" aria-label="Instagram">Instagram</a></li>
+              <li><a href="" aria-label="Twitter">Twitter</a></li>
+              <li><a href="" aria-label="Facebook">Facebook</a></li>
+              <li><a href="" aria-label="Linkedin">Linkedin</a></li>
             </ul>
           </li>
           <li>
@@ -126,10 +128,10 @@
             <h3 lang="en">Robert Jakis</h3>
             <p>Marketing</p>
             <ul>
-              <li><a href="">Instagram</a></li>
-              <li><a href="">Twitter</a></li>
-              <li><a href="">Facebook</a></li>
-              <li><a href="">Linkedin</a></li>
+              <li><a href="" aria-label="Instagram">Instagram</a></li>
+              <li><a href="" aria-label="Twitter">Twitter</a></li>
+              <li><a href="" aria-label="Facebook">Facebook</a></li>
+              <li><a href="" aria-label="Linkedin">Linkedin</a></li>
             </ul>
           </li>
           <li>
@@ -137,10 +139,10 @@
             <h3>Martin Doe</h3>
             <p>UI Designer</p>
             <ul>
-              <li><a href="">Instagram</a></li>
-              <li><a href="">Twitter</a></li>
-              <li><a href="">Facebook</a></li>
-              <li><a href="">Linkedin</a></li>
+              <li><a href="" aria-label="Instagram">Instagram</a></li>
+              <li><a href="" aria-label="Twitter">Twitter</a></li>
+              <li><a href="" aria-label="Facebook">Facebook</a></li>
+              <li><a href="" aria-label="Linkedin">Linkedin</a></li>
             </ul>
           </li>
         </ul>
@@ -182,5 +184,29 @@
         </ul>
       </section>
     </main>
+    <!--Футер-->
+    <footer>
+      <div>
+        <p>Web Studio</p>
+        <address>
+          Киев, пр-т Леси Украинки, 2 <br />
+          info@example.com <br />
+          +38 099 111 11 11
+        </address>
+      </div>
+      <div>
+        <b>Присоединяйтесь</b>
+        <ul>
+          <li><a href="" aria-label="Instagram">Instagram</a></li>
+          <li><a href="" aria-label="Twitter">Twitter</a></li>
+          <li><a href="" aria-label="Facebook">Facebook</a></li>
+          <li><a href="" aria-label="Linkedin">Linkedin</a></li>
+        </ul>
+      </div>
+      <div>
+        <b>Подпишитесь на рассылку</b>
+      </div>
+      <p>2020 | Developed by GoIT Students</p>
+    </footer>
   </body>
 </html>
