--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <!--Шапка сайта-->
     <header>
       <nav>
-        <a href="/">Web Studio</a>
+        <a href="./">Web Studio</a>
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Портфолио</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
       <address>
@@ -37,7 +37,7 @@
       <!--Герой-->
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <a href="">Заказать услугу</a>
+        <a href="#">Заказать услугу</a>
       </section>
       <!--Преимущества-->
       <section>
@@ -82,18 +82,18 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img src="./images/service-1.jpg" alt="" />
-            <a href=""><h3>Десктопное приложение</h3></a>
+            <img src="./images/service-1.jpg" alt="" width="150" />
+            <a href="#"><h3>Десктопное приложение</h3></a>
           </li>
           <li>
             <img src="./images/service-2.jpg" alt="" />
-            <a href="">
+            <a href="#">
               <h3>Мобильные приложения</h3>
             </a>
           </li>
           <li>
             <img src="./images/service-3.jpg" alt="" />
-            <a href=""><h3>Дизайнерские решения</h3></a>
+            <a href="#"><h3>Дизайнерские решения</h3></a>
           </li>
         </ul>
       </section>
@@ -106,10 +106,10 @@
             <h3>John Smith</h3>
             <p>Product Designer</p>
             <ul>
-              <li><a href="" aria-label="Instagram">Instagram</a></li>
-              <li><a href="" aria-label="Twitter">Twitter</a></li>
-              <li><a href="" aria-label="Facebook">Facebook</a></li>
-              <li><a href="" aria-label="Linkedin">Linkedin</a></li>
+              <li><a href="#" aria-label="Instagram">Instagram</a></li>
+              <li><a href="#" aria-label="Twitter">Twitter</a></li>
+              <li><a href="#" aria-label="Facebook">Facebook</a></li>
+              <li><a href="#" aria-label="Linkedin">Linkedin</a></li>
             </ul>
           </li>
           <li>
@@ -117,10 +117,10 @@
             <h3>Marta Stewart</h3>
             <p>Frontend Developer</p>
             <ul>
-              <li><a href="" aria-label="Instagram">Instagram</a></li>
-              <li><a href="" aria-label="Twitter">Twitter</a></li>
-              <li><a href="" aria-label="Facebook">Facebook</a></li>
-              <li><a href="" aria-label="Linkedin">Linkedin</a></li>
+              <li><a href="#" aria-label="Instagram">Instagram</a></li>
+              <li><a href="#" aria-label="Twitter">Twitter</a></li>
+              <li><a href="#" aria-label="Facebook">Facebook</a></li>
+              <li><a href="#" aria-label="Linkedin">Linkedin</a></li>
             </ul>
           </li>
           <li>
@@ -128,10 +128,10 @@
             <h3 lang="en">Robert Jakis</h3>
             <p>Marketing</p>
             <ul>
-              <li><a href="" aria-label="Instagram">Instagram</a></li>
-              <li><a href="" aria-label="Twitter">Twitter</a></li>
-              <li><a href="" aria-label="Facebook">Facebook</a></li>
-              <li><a href="" aria-label="Linkedin">Linkedin</a></li>
+              <li><a href="#" aria-label="Instagram">Instagram</a></li>
+              <li><a href="#" aria-label="Twitter">Twitter</a></li>
+              <li><a href="#" aria-label="Facebook">Facebook</a></li>
+              <li><a href="#" aria-label="Linkedin">Linkedin</a></li>
             </ul>
           </li>
           <li>
@@ -139,10 +139,10 @@
             <h3>Martin Doe</h3>
             <p>UI Designer</p>
             <ul>
-              <li><a href="" aria-label="Instagram">Instagram</a></li>
-              <li><a href="" aria-label="Twitter">Twitter</a></li>
-              <li><a href="" aria-label="Facebook">Facebook</a></li>
-              <li><a href="" aria-label="Linkedin">Linkedin</a></li>
+              <li><a href="#" aria-label="Instagram">Instagram</a></li>
+              <li><a href="#" aria-label="Twitter">Twitter</a></li>
+              <li><a href="#" aria-label="Facebook">Facebook</a></li>
+              <li><a href="#" aria-label="Linkedin">Linkedin</a></li>
             </ul>
           </li>
         </ul>
@@ -152,32 +152,32 @@
         <h2>Постоянные клиенты</h2>
         <ul>
           <li>
-            <a href=""
+            <a href="#"
               ><img src="./images/logo-1.svg" alt="Первая компания"
             /></a>
           </li>
           <li>
-            <a href=""
+            <a href="#"
               ><img src="./images/logo-2.svg" alt="Вторая компания"
             /></a>
           </li>
           <li>
-            <a href=""
+            <a href="#"
               ><img src="./images/logo-3.svg" alt="Третья компания"
             /></a>
           </li>
           <li>
-            <a href=""
+            <a href="#"
               ><img src="./images/logo-4.svg" alt="Четвертая компания"
             /></a>
           </li>
           <li>
-            <a href=""
+            <a href="#"
               ><img src="./images/logo-5.svg" alt="Пятая компания"
             /></a>
           </li>
           <li>
-            <a href=""
+            <a href="#"
               ><img src="./images/logo-6.svg" alt="Шестая компания"
             /></a>
           </li>
@@ -197,10 +197,10 @@
       <div>
         <b>Присоединяйтесь</b>
         <ul>
-          <li><a href="" aria-label="Instagram">Instagram</a></li>
-          <li><a href="" aria-label="Twitter">Twitter</a></li>
-          <li><a href="" aria-label="Facebook">Facebook</a></li>
-          <li><a href="" aria-label="Linkedin">Linkedin</a></li>
+          <li><a href="#" aria-label="Instagram">Instagram</a></li>
+          <li><a href="#" aria-label="Twitter">Twitter</a></li>
+          <li><a href="#" aria-label="Facebook">Facebook</a></li>
+          <li><a href="#" aria-label="Linkedin">Linkedin</a></li>
         </ul>
       </div>
       <div>
