--- a/index.html
+++ b/index.html
@@ -82,17 +82,17 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img src="./images/service-1.jpg" alt="" width="150" />
+            <img src="./images/service-1.jpg" alt="" width="370" />
             <a href="#"><h3>Десктопное приложение</h3></a>
           </li>
           <li>
-            <img src="./images/service-2.jpg" alt="" />
+            <img src="./images/service-2.jpg" alt="" width="370" />
             <a href="#">
               <h3>Мобильные приложения</h3>
             </a>
           </li>
           <li>
-            <img src="./images/service-3.jpg" alt="" />
+            <img src="./images/service-3.jpg" alt="" width="370" />
             <a href="#"><h3>Дизайнерские решения</h3></a>
           </li>
         </ul>
@@ -102,7 +102,7 @@
         <h2>Наша команда</h2>
         <ul lang="en">
           <li>
-            <img src="./images/team-card-1.jpg" alt="" />
+            <img src="./images/team-card-1.jpg" alt="" width="270" />
             <h3>John Smith</h3>
             <p>Product Designer</p>
             <ul>
@@ -113,7 +113,7 @@
             </ul>
           </li>
           <li>
-            <img src="./images/team-card-2.jpg" alt="" />
+            <img src="./images/team-card-2.jpg" alt="" width="270" />
             <h3>Marta Stewart</h3>
             <p>Frontend Developer</p>
             <ul>
@@ -124,7 +124,7 @@
             </ul>
           </li>
           <li>
-            <img src="./images/team-card-3.jpg" alt="" />
+            <img src="./images/team-card-3.jpg" alt="" width="270" />
             <h3 lang="en">Robert Jakis</h3>
             <p>Marketing</p>
             <ul>
@@ -135,7 +135,7 @@
             </ul>
           </li>
           <li>
-            <img src="./images/team-card-4.jpg" alt="" />
+            <img src="./images/team-card-4.jpg" alt="" width="270" />
             <h3>Martin Doe</h3>
             <p>UI Designer</p>
             <ul>
